# ai-mcp-news-search

./: .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: default.yaml
src/: main.py  news_search_config.py  news_search_mcp_service.py
tests/: test_server.py
tests/unit/: test_news_search_config.py
